--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -1,7 +1,8 @@
 @use "../../styles/variables" as *;
 
 .nav {
-  margin: 1rem 2rem;
+  margin: 0.5rem 2rem;
+  padding: 0.5rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -14,6 +15,7 @@
   }
   &__link {
     color: $primaryBeige;
+    text-decoration: none;
     &:hover {
       color: rgba($color: #ffe4c4, $alpha: 0.5);
     }
