--- a/src/index.scss
+++ b/src/index.scss
@@ -1,9 +1,9 @@
 @use "./styles/variables" as *;
 
-.home {
+:root {
   width: 100vw;
   height: 100vh;
   margin: auto;
-  border: 0.2rem solid $primaryBeige;
-  border-radius: 3rem;
+  border: 0.1rem solid $primaryBeige;
+  border-radius: 1rem;
 }
